Archive2/6a/ea005e51a8e83a/output
main.cpp:1:1: error: 'VTKViewer' does not name a type
 VTKViewer::VTKViewer(QWidget *parent) : QWidget(parent)
 ^
